# Ostiro-Atlas

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  compose.yaml  finary_design_system.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: quality.yml  release-windows.yml  website-pages.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  build-mode.ts  complete-wealth.tsx  components.tsx  data-store.ts  database.ts  demo-data.ts  new-pages.tsx  pages.tsx  profile-flow.tsx  profile-store.ts  profile-types.ts  quick-onboarding.tsx  sidebar.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/website/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/website/public/: CNAME
apps/website/scripts/: generate-routes.mjs
apps/website/src/: App.tsx  styles.css
docker/: nginx.conf
docs/: API.md  ARCHITECTURE.md  BUILD_WINDOWS.md  CODE_SIGNING_POLICY.md  COMPLIANCE.md  DATA_RELIABILITY.md  FINANCIAL_FORMULAS.md  OPEN_BANKING_RESEARCH.md  PRIVACY.md  PRODUCT_SPEC.md
examples/: demo-account.json
examples/csv/: banque-demo.csv  courtier-demo.csv
scripts/: build-windows.ps1
