[package]
name = "ostiro-atlas"
version = "0.3.0"
description = "Gestion patrimoniale locale, fiable et open source"
authors = ["Ostiro contributors"]
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "ostiro_atlas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
